# DeepRead

./: .gitignore  EXAMPLES.md  README.md  README_REPLICODE.md  good_results.json  poor_results.json  pyproject.toml  setup.py
deepread/: .env  __init__.py  agent.py  analyzers.py  cc_test.py  cli.py  main.py  report.py  utils.py
deepread/evals/: data.py  evaluation.py
deepread/utils/: github_repo.py
example_repos/good_ml_repo/: README.md  inference.py  requirements.txt  train.py
example_repos/good_ml_repo/configs/: train_config.yaml
example_repos/poor_ml_repo/: model.py
replicode/utils/: github_repo.py
